# oneuniverse

./: README.md  demo_weights.py  pyproject.toml
docs/: weight_normalization_research.md
notebooks/: 01_open_database.ipynb  02_select_objects.ipynb  03_eboss_desi_crossmatch.ipynb
oneuniverse/: __init__.py
oneuniverse/combine/: __init__.py  catalog.py  measurements.py  strategies.py
plans/: 2026-04-15-phase1-ouf-v2.md  2026-04-15-phase3-healpix-partitioning.md  2026-04-15-phase4-unified-oneuid.md  2026-04-15-stabilisation-roadmap.md  2026-04-16-phase5-streaming-hydration.md  2026-04-16-phase6-housekeeping-combine.md  2026-04-20-phase7-temporal.md  2026-04-20-phase8-subobject.md  2026-04-20-temporal-subobject-roadmap.md  2026-04-23-phase10-probabilistic-redshifts.md  2026-04-23-phase11-selection-weights.md  2026-04-23-phase9-desi-dr1-onboarding.md  2026-04-23-phase9-fragilities.md  README.md
research/: cosmography_reference.md  database_technology_research.md  digital_twin_research.md  eboss_dr16q_research.md  weighting_schemes_research.md
scripts/: onboard_desi_dr1_qso.py
test/: test_atomic.py  test_core.py  test_database.py  test_database_as_of.py  test_database_entry.py  test_dataset_view.py  test_dataset_view_time.py  test_default_weight.py  test_desi_dr1_fixture.py  test_desi_dr1_onboarding.py  test_eboss.py  test_format.py  test_hashing.py  test_healpix_partitioning.py  test_lightcurve_geometry.py  test_lightcurve_roundtrip.py  test_manifest.py  test_oneuid.py  test_oneuid_bitemporal.py  test_oneuid_named.py  test_oneuid_rules.py  test_oneuid_streaming.py  test_partition_stats_time.py  test_registry_frozen.py  test_subobject_bitemporal.py  test_subobject_build.py  test_subobject_query.py  test_subobject_rules.py  test_temporal_spec.py  test_validity_spec.py  test_visual_desi_dr1.py  test_visual_subobject.py  test_visual_temporal.py  test_weight.py
(+62 files in other folders)
